<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        tools:context=".GameActivity">

    <TextView
            android:id="@+id/tvScoreLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/score"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold" android:textSize="24sp" android:layout_marginTop="8dp"
            android:layout_marginLeft="28dp" android:textColor="@android:color/holo_orange_light"/>
    <TextView
            android:text="@string/zero"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvScore" app:layout_constraintStart_toEndOf="@+id/tvScoreLabel"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
            android:textStyle="bold" android:textColor="@android:color/holo_blue_light"/>
    <TextView
            android:text="@string/lives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLivesLabel" android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/holo_orange_light" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvLives"/>
    <TextView
            android:text="@string/lives_start"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLives" android:textSize="24sp"
            android:textStyle="bold" android:layout_marginEnd="28dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/holo_green_light"/>
    <com.ernjvr.asteroids.view.GameView
            android:id="@+id/vGamePlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="46dp"
            app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>