<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/space11"
        tools:context=".GameOverActivity">
    <TextView
            android:id="@+id/tvFinalScoreLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:text="@string/score"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold" android:textSize="24sp" android:layout_marginTop="8dp"
            android:layout_marginStart="28dp" android:textColor="@android:color/holo_orange_light"/>
    <TextView
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:id="@+id/tvFinalScore" app:layout_constraintStart_toEndOf="@+id/tvFinalScoreLabel"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
            android:textStyle="bold" android:textColor="@android:color/holo_blue_light"/>
    <TextView
            android:text="@string/lives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:id="@+id/tvFinalLivesLabel" android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/holo_orange_light" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvFinalLives"/>
    <TextView
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:id="@+id/tvFinalLives" android:textSize="24sp"
            android:textStyle="bold" android:layout_marginEnd="28dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/holo_blue_light"/>
    <TextView
            android:id="@+id/tvGameOverLabel"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:autoSizeTextType="uniform"
            android:text="@string/game_over"
            android:textStyle="bold" android:textSize="24sp"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnGameOverStart" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.733"/>
    <Button
            android:text="@string/play_game"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnGameOverStart" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" android:background="@drawable/btn_rounded"
            android:textStyle="bold" android:textSize="24sp"/>
    <TextView
            android:text="@string/new_high_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:id="@+id/tvHighScore" android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/holo_orange_light" android:textSize="24sp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tvGameOverLabel"
            app:layout_constraintHorizontal_bias="0.497" android:visibility="invisible"/>
</android.support.constraint.ConstraintLayout>